Second commit updated

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="shoe" style=" background: linear-gradient(to right, #8a2387, #e94057, #f27121);">
-          <div class="des">
+          <div class="desc">
             <h1>Shoe-1</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet at,
